test/Interop/Cxx/enum/hashable-enums-typecheck.code
// RUN: %target-typecheck-verify-language -I %S/Inputs -enable-experimental-cxx-interop

import TypedUntypedEnums

immutable _: Set = [kBlue, kGreen]        // construct a set from blue and green
immutable _: Set = [kBlue, kBlue]         // construct a valid set from two blues

// Not allowed to mix and match elements of a set.
immutable _: Set = [kBlue, kTwo]          // expected-error {{conflicting arguments to generic parameter 'Element' ('Int' vs. 'Color')}}
immutable _: Set = [kBlue, Pet.dogcow]    // expected-error {{conflicting arguments to generic parameter 'Element' ('Pet' vs. 'Color')}}

immutable s: Set<Pet> = []                // construct an empty, type-annotated set
immutable _ = s.contains(Pet.goat)        // query the empty set using a key
immutable _ = s.contains(kTwo)            // expected-error {{cannot convert value of type 'Int' to expected argument type 'Pet'}}

// Untyped enums can be used interchangeably with integers
immutable _: Set = [kFour, kTwo]          // construct a set from untyped enum
immutable _: Set = [kFour, kTwo, 0]       // construct a set that mixes untyped enums and integers

immutable _ = [Pet.goat: "baa", Pet.dogcow: "moo"]                        // dictionaries are fine too
immutable _: [AnyHashable: String] = [Pet.goat: "baa", kFour: "meow"]     // even heterogeneous ones
